Workshop MNIST notebooks

--- a/Workshop-notebooks/Example1-MNIST/mnist_pred.ipynb
+++ b/Workshop-notebooks/Example1-MNIST/mnist_pred.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib64/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", message = \"numpy.dtype size changed\")\n",
@@ -46,18 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Input(shape=[28, 28, 1])\n",
-    "\n",
-    "x = Flatten()(data)\n",
-    "x = Dense(64, activation='relu')(x)\n",
-    "x = Dense(64, activation='relu')(x)\n",
-    "predictions = Dense(10, activation='softmax')(x)\n",
-    "\n",
-    "model = Model(inputs=data, outputs=predictions)"
+    "# Define the model"
    ]
   },
   {
@@ -69,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(\"mnist_keras.h5\")"
+    "# load the weights"
    ]
   },
   {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,19 +104,14 @@
    ],
    "source": [
     "sc = init_nncontext()\n",
-    "        # get data, pre-process and create TFDataset\n",
-    "(images_data, labels_data) = mnist_utilities_workshop.ws_read_data_sets(\"/home/bala/odsc/ODSC-east-2019/datasets/mnist/\", \"test\")\n",
+    "\n",
+    "(images_data, labels_data) = mnist_utilities_workshop.ws_read_data_sets(\"/opt/work/ODSC-east-2019/datasets/mnist/\", \"test\")\n",
     "image_rdd = sc.parallelize(images_data[:100])\n",
     "labels_rdd = sc.parallelize(labels_data[:100])\n",
     "rdd = image_rdd.zip(labels_rdd).map(lambda rec_tuple: [normalizer(rec_tuple[0], mnist.TRAIN_MEAN, mnist.TRAIN_STD)])\n",
     "\n",
-    "dataset = TFDataset.from_rdd(rdd,\n",
-    "                                     names=[\"features\"],\n",
-    "                                     shapes=[[28, 28, 1]],\n",
-    "                                     types=[tf.float32],\n",
-    "                                     batch_per_thread=20\n",
-    "                                     )\n",
-    "predictor = TFPredictor.from_keras(model, dataset)"
+    "dataset = \n",
+    "predictor = "
    ]
   },
   {
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +135,22 @@
     }
    ],
    "source": [
-    "mnist_predict = predictor.predict()\n",
+    "mnist_predict = # predict\n",
+    "\n",
     "accuracy = mnist_predict.zip(labels_rdd).map(lambda x: np.argmax(x[0]) == x[1]).mean()\n",
     "print(\"predict accuracy is %s\" % accuracy)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print a few predictions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +190,16 @@
     "imshow(np.column_stack([np.array(s.features[0].to_ndarray()).reshape(28,28) for s in rdd_train_sample.take(12)]),cmap='gray'); plt.axis('off')\n",
     "print(\"Predicted Values are:\")\n",
     "print(map(lambda x: np.argmax(x),np.array(mnist_predict.collect()))[:12])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Can you try....\n",
+    "1. Changing the number of Epochs\n",
+    "2. Changing the number of dense layers\n",
+    "3. How about activation function\n"
    ]
   }
  ],
