xray workshop notebook

--- a/Workshop-notebooks/Example8-Xray/ChestXray_Inference.ipynb
+++ b/Workshop-notebooks/Example8-Xray/ChestXray_Inference.ipynb
@@ -91,8 +91,15 @@
     "    sqlContext = SQLContext(sc)\n",
     "\n",
     "    # Load the model\n",
-    "    trained_model = Net.load(model_path, bin_path)\n",
+    "    trained_model = \n",
     "    return trained_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to display the X-ray"
    ]
   },
   {
@@ -106,6 +113,13 @@
     "    img=mpimg.imread(image_path)\n",
     "    imgplot = plt.imshow(img)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading and processing the labels"
    ]
   },
   {
@@ -149,25 +163,36 @@
     "                .withColumnRenamed('Finding Labels', 'Finding_Labels')\n",
     "    inferDF = imageDF.join(labelDF1, on=\"Image_Index\", how=\"inner\")    \n",
     "    \n",
-    "    # Predict output of when inputdf is passed through model\n",
-    "    transformer = ChainedPreprocessing([\n",
-    "        RowToImageFeature(),\n",
-    "        ImageCenterCrop(224, 224),\n",
-    "        ImageChannelNormalize(123.68, 116.779, 103.939),\n",
-    "        ImageMatToTensor(),\n",
-    "        ImageFeatureToTensor()])\n",
-    "    classifier_model = NNModel(model, transformer).setFeaturesCol(\"image\")\\\n",
-    "                        .setBatchSize(1)\n",
-    "    output = classifier_model.transform(inferDF)\n",
+    "    # Write the transformer\n",
+    "    transformer = \n",
+    "    \n",
+    "    # Fill the classifier\n",
+    "    classifier_model = \n",
+    "    \n",
+    "    ## Predict\n",
+    "    output = \n",
     "    return output\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## print the predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def print_prediction_output(predDF):\n",
     "    print(\"\\n\\n\")  \n",
     "    label_texts = [\"Atelectasis\", \"Cardiomegaly\", \"Effusion\", \"Infiltration\", \"Mass\", \"Nodule\", \"Pneumonia\",\n",
     "               \"Pneumothorax\", \"Consolidation\", \"Edema\", \"Emphysema\", \"Fibrosis\", \"Pleural_Thickening\", \"Hernia\"]\n",
     "\n",
-    "#    print(predDF.show(1))\n",
-    "#    print(\"length of prediction array : \", len(predDF.collect()[0].prediction))\n",
     "    predictions_list = predDF.collect()[0].prediction\n",
     "    labelList = predDF.collect()[0].label\n",
     "    print(\"{:<25} - {:<25} - {:<15}\".format('Finding_Labels', 'Prediction', 'Label'))\n",
@@ -200,7 +225,7 @@
     "    bin_path = \"file:////opt/work/ODSC-east-2019/models/xray_model_2019_04_17_00_04_38.bin\"\n",
     "    label_path = \"file:////opt/work/ODSC-east-2019/datasets/xray/Data_Entry_2017.csv\"\n",
     "   \n",
-    "    trained_model = load_spark_model(model_path,bin_path)"
+    "    trained_model = "
    ]
   },
   {
@@ -254,7 +279,7 @@
     "%%time\n",
     "    # Path to the image for inference\n",
     "    image_path = \"file:////opt/work/ODSC-east-2019/datasets/xray/00000013_001.png\"\n",
-    "    predictionDF = predict(trained_model, label_path, image_path)\n",
+    "    predictionDF = \n",
     "    print_prediction_output(predictionDF)"
    ]
   }
